2007-07-20	Benedikt Meurer <benny@xfce.org>

	* helpers/, icons/, terminal/, Makefile.am, NEWS, Terminal.ui,
	  configure.in.in, doc/: Drop the preferred application handling
	  from Terminal and use the Xfce preferred application directly.
	  This fixes a security issue, where the URL handling allowed
	  for remote shell command execution, because the helper scripts
	  were run via the shell (Bug #3383).
	* po/POTFILES.in: Update list of translatable files.
	* po/Terminal.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.
	* po-doc/*.po: Merge new translations.

2007-07-20	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Fix typo. Be sure to defined NDEBUG if debug
	  support is minimal or disabled. Fix test for -errwarn=%all.
	* terminal/: Several small improvements.
	* NEWS, terminal/terminal-tab-header.c: Close tabs with middle
	  mouse click. Bug #3380.
	* po/Terminal.pot, po/*.po: Update translations.

2007-05-25	Benedikt Meurer <benny@xfce.org>

	* INSTALL, configure.in.in: Update for latest autoconf.
	* terminal/terminal-dialogs.c(terminal_dialogs_show_about): Add
	  support for new GTK+ 2.11 API.

2007-04-08	Jean-François Wauthy <pollux@xfce.org>

	* configure.in.in: Add support for fr translations into
	  configure.in.in (patch by Maximilian Schleiss)	

2007-02-27	Nick Schermer <nick@xfce.org>

	* configure.in.in: Apply patch from bug 2920 to check the -Wall, 
	  -Werror and -errwarn=%all flags before compiling.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, terminal/terminal-shortcut-editor.c,
	  terminal/Makefile.am: Link to -lx11. Bug #2870.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-dbus.c: Apply Brian's patch to fix invalid
	  variable type for user id. Bug #2898.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.6 ===
	* NEWS, configure.in.in: Bump version.